[gd_scene load_steps=2 format=3 uid="uid://dfhycyi70n3ho"]

[ext_resource type="Script" uid="uid://c128eq4fq8f4i" path="res://Scripts/Main.gd" id="1_cmysm"]

[node name="templeScr" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cmysm")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = -39.0
offset_right = 94.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
text = "Cidade"

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(481.5, 285)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
